--- a/Classifier.ipynb
+++ b/Classifier.ipynb
@@ -139,13 +139,13 @@
    "source": [
     "# Create the train dataset and validation dataset\n",
     "\n",
-    "train_dataset = Dataset(transform=composed\n",
-    "                        ,csv_file=train_csv_file\n",
-    "                        ,data_dir=train_data_dir)\n",
+    "train_dataset = Dataset(transform=composed,\n",
+    "                        csv_file=train_csv_file,\n",
+    "                        data_dir=train_data_dir)\n",
     "\n",
-    "validation_dataset = Dataset(transform=composed\n",
-    "                          ,csv_file=validation_csv_file\n",
-    "                          ,data_dir=validation_data_dir)"
+    "validation_dataset = Dataset(transform=composed,\n",
+    "                          csv_file=validation_csv_file,\n",
+    "                          data_dir=validation_data_dir)"
    ]
   },
   {
@@ -249,7 +249,7 @@
    "source": [
     "# Create the data loader\n",
     "\n",
-    "train_loader = torch.utils.data.DataLoader(dataset=train_dataset,batch_size=15)\n",
+    "train_loader = torch.utils.data.DataLoader(dataset=train_dataset, batch_size=15)\n",
     "validation_loader = torch.utils.data.DataLoader(dataset=validation_dataset, batch_size=10)"
    ]
   },
@@ -378,7 +378,7 @@
     "plt.ylabel('Average Loss per Epoch', fontsize=15);\n",
     "plt.title(\"Average Loss per Epoch vs Epoch\", fontsize=18);\n",
     "plt.grid(True)\n",
-    "plt.xlim(1,N_EPOCHS);\n",
+    "plt.xlim(1, N_EPOCHS);\n",
     "plt.xticks(fontsize=15);\n",
     "plt.yticks(fontsize=15);"
    ]
@@ -444,28 +444,28 @@
    "source": [
     "# Plot the images with labels\n",
     "\n",
-    "look_up = {0: 'predicted: $5'\n",
-    "           , 1: 'predicted: $10'\n",
-    "           , 2: 'predicted: $20'\n",
-    "           , 3: 'predicted: $50'\n",
-    "           , 4: 'predicted: $100'\n",
-    "           , 5: 'predicted $200'\n",
-    "           , 6: 'predicted $500'}\n",
+    "look_up = {0: 'predicted: $5',\n",
+    "           1: 'predicted: $10',\n",
+    "           2: 'predicted: $20',\n",
+    "           3: 'predicted: $50',\n",
+    "           4: 'predicted: $100',\n",
+    "           5: 'predicted $200',\n",
+    "           6: 'predicted $500'}\n",
     "random.seed(0)\n",
     "numbers = random.sample(range(70), 5)\n",
     "\n",
     "# Type your code here\n",
-    "test_dataset = Dataset(transform=composed\n",
-    "                          ,csv_file=validation_csv_file\n",
-    "                          ,data_dir=validation_data_dir)\n",
+    "test_dataset = Dataset(transform=composed,\n",
+    "                          csv_file=validation_csv_file,\n",
+    "                          data_dir=validation_data_dir)\n",
     "\n",
-    "test_loader=torch.utils.data.DataLoader(dataset=test_dataset,batch_size=5)\n",
+    "test_loader=torch.utils.data.DataLoader(dataset=test_dataset, batch_size=5)\n",
     "correct=0\n",
     "\n",
     "for x,y in test_loader:\n",
     "    model.eval()\n",
     "    z=model(x_test)\n",
-    "    _,yhat=torch.max(z.data,1)\n",
+    "    _,yhat=torch.max(z.data, 1)\n",
     "    correct+=(yhat==y_test).sum().item()\n"
    ]
   },
