--- a/Classifier.ipynb
+++ b/Classifier.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,11 +58,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Absolute path for finding the directory contains image datasets\n",
+    "# The directory contains image datasets\n",
     "\n",
     "train_data_dir = './data/training_data_pytorch/'\n",
     "validation_data_dir = './data/validation_data_pytorch/'"
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,30 +159,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2 id=\"ques\">Questions</h2>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<b>Step 1</b>: Load the pre-trained model <code>resnet18</code> Set the parameter <code>pretrained</code> to true."
+    "<h2>Models</h2>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Downloading: \"https://download.pytorch.org/models/resnet18-f37072fd.pth\" to C:\\Users\\JKHATRI/.cache\\torch\\hub\\checkpoints\\resnet18-f37072fd.pth\n",
-      "100.0%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load the pre-trained model resnet18\n",
     "\n",
@@ -191,9 +175,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ResNet(\n",
+      "  (conv1): Conv2d(3, 64, kernel_size=(7, 7), stride=(2, 2), padding=(3, 3), bias=False)\n",
+      "  (bn1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "  (relu): ReLU(inplace=True)\n",
+      "  (maxpool): MaxPool2d(kernel_size=3, stride=2, padding=1, dilation=1, ceil_mode=False)\n",
+      "  (layer1): Sequential(\n",
+      "    (0): BasicBlock(\n",
+      "      (conv1): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+      "      (bn1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "      (relu): ReLU(inplace=True)\n",
+      "      (conv2): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+      "      (bn2): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "    )\n",
+      "    (1): BasicBlock(\n",
+      "      (conv1): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+      "      (bn1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "      (relu): ReLU(inplace=True)\n",
+      "      (conv2): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+      "      (bn2): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "    )\n",
+      "  )\n",
+      "  (layer2): Sequential(\n",
+      "    (0): BasicBlock(\n",
+      "      (conv1): Conv2d(64, 128, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1), bias=False)\n",
+      "      (bn1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "      (relu): ReLU(inplace=True)\n",
+      "      (conv2): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+      "      (bn2): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "      (downsample): Sequential(\n",
+      "        (0): Conv2d(64, 128, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
+      "        (1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "      )\n",
+      "    )\n",
+      "    (1): BasicBlock(\n",
+      "      (conv1): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+      "      (bn1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "      (relu): ReLU(inplace=True)\n",
+      "      (conv2): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+      "      (bn2): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "    )\n",
+      "  )\n",
+      "  (layer3): Sequential(\n",
+      "    (0): BasicBlock(\n",
+      "      (conv1): Conv2d(128, 256, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1), bias=False)\n",
+      "      (bn1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "      (relu): ReLU(inplace=True)\n",
+      "      (conv2): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+      "      (bn2): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "      (downsample): Sequential(\n",
+      "        (0): Conv2d(128, 256, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
+      "        (1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "      )\n",
+      "    )\n",
+      "    (1): BasicBlock(\n",
+      "      (conv1): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+      "      (bn1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "      (relu): ReLU(inplace=True)\n",
+      "      (conv2): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+      "      (bn2): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "    )\n",
+      "  )\n",
+      "  (layer4): Sequential(\n",
+      "    (0): BasicBlock(\n",
+      "      (conv1): Conv2d(256, 512, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1), bias=False)\n",
+      "      (bn1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "      (relu): ReLU(inplace=True)\n",
+      "      (conv2): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+      "      (bn2): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "      (downsample): Sequential(\n",
+      "        (0): Conv2d(256, 512, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
+      "        (1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "      )\n",
+      "    )\n",
+      "    (1): BasicBlock(\n",
+      "      (conv1): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+      "      (bn1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "      (relu): ReLU(inplace=True)\n",
+      "      (conv2): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+      "      (bn2): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "    )\n",
+      "  )\n",
+      "  (avgpool): AdaptiveAvgPool2d(output_size=(1, 1))\n",
+      "  (fc): Linear(in_features=512, out_features=7, bias=True)\n",
+      ")\n"
+     ]
+    }
+   ],
    "source": [
     "# Set the parameter cannot be trained for the pre-trained model\n",
     "\n",
@@ -213,7 +288,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3 id=\"q32\">Train the model</h3>"
+    "<h3>Train the model <code>Resnet18</code> to do the prediction</h3>"
    ]
   },
   {
@@ -225,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,14 +355,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 0/20\n",
       "Epoch: 1/20\n",
       "Epoch: 2/20\n",
       "Epoch: 3/20\n",
@@ -306,7 +380,8 @@
       "Epoch: 16/20\n",
       "Epoch: 17/20\n",
       "Epoch: 18/20\n",
-      "Epoch: 19/20\n"
+      "Epoch: 19/20\n",
+      "Epoch: 20/20\n"
      ]
     }
    ],
@@ -340,7 +415,9 @@
     "    accuracy=correct/n_test\n",
     "    accuracy_list.append(accuracy)\n",
     "    \n",
-    "    print(\"Epoch: {}/{}\".format(epoch+1,N_EPOCHS))"
+    "    print(\"Epoch: {}/{}\".format(epoch+1,N_EPOCHS))\n",
+    "    \n",
+    "print(accuracy)"
    ]
   },
   {
@@ -352,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -430,15 +507,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Create a test dataset using validation data. And, create your own <code>plot_random_image()</code> function to plot 5 random images which index is in the <code>numbers</code> list. Run the function to plot image, print the predicted label and print a string indicate whether it has been correctly classified or mis-classified.<br> <b>(Your peer reviewer is going to mark based on what you plot here.)</b>"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -598,72 +668,21 @@
     "    \n",
     "    preds=nn.LogSoftmax(dim=1)(model(image)).data.cpu().numpy()\n",
     "    res=np.argmax(preds)\n",
-    "    print(look_up[res] + ' (Correctly classified)')\n"
+    "    print(look_up[res] + ' (Correctly classified)')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3>Question 3.4: Use the second model <code>Densenet121</code> to do the prediction</h3><b>3 points</b>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Repeat the steps in Question 3.1, 3.2 to predict the result using <code>models.densenet121</code> model. Then, print out the last validation accuracy."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<p>Steps:</p>\n",
-    "<ol>\n",
-    "    <li>Load the pre-trained model Densenet</li>\n",
-    "    <li>Replace the last classification layer with only 7 classes</li>\n",
-    "    <li>Set the configuration (parameters)</li>\n",
-    "    <li>Train the model</li>\n",
-    "    <li>Print the last validation accuracy</li>\n",
-    "</ol>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Hint:\n",
-    "<ul>\n",
-    "    <li>The second last layer for this model has 1024 outputs.</li>\n",
-    "    <li>The last layer for <code>Densenet121</code> can be accessed by <code>model.classifier</code></li>\n",
-    "    <li>Use the criterion function <code>nn.CrossEntropyLoss()</code></li>\n",
-    "    <li>Train Batch Size: 15; Validation Batch Size: 10</li>\n",
-    "    <li>Optimizer: Adam with learning rate 0.003</li>\n",
-    "    <li>10 Epoches. Otherwise, it will take too long.</li>\n",
-    "</ul>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "You are welcome to try any pattern of setting and find out the best result. Please name the model variable as <code>model_des</code>.<br> <b>(Your peer reviewer is going to mark based on what you print here.)</b>"
+    "<h3>Train the second model <code>Densenet121</code> to do the prediction</h3>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Downloading: \"https://download.pytorch.org/models/densenet121-a639ec97.pth\" to C:\\Users\\JKHATRI/.cache\\torch\\hub\\checkpoints\\densenet121-a639ec97.pth\n",
-      "100.0%\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -1174,33 +1193,31 @@
    "source": [
     "# Use densenet121 to train the model and print out the last validation accuracy.\n",
     "\n",
-    "\n",
     "model_des=models.densenet121(pretrained=True)\n",
     "\n",
     "for param in model_des.parameters():\n",
     "    param.requires_grad=False\n",
     "    \n",
-    "model_des.classifier=nn.Linear(1024,7)\n",
+    "model_des.classifier=nn.Linear(1024, 7)\n",
     "\n",
     "print(model_des)\n",
     "criterion=nn.CrossEntropyLoss()\n",
     "\n",
-    "train_loader=torch.utils.data.DataLoader(dataset=train_dataset,batch_size=15)\n",
+    "train_loader=torch.utils.data.DataLoader(dataset=train_dataset, batch_size=15)\n",
     "validation_loader=torch.utils.data.DataLoader(dataset=validation_dataset, batch_size=10)\n",
     "\n",
-    "optimizer=torch.optim.Adam([parameters for parameters in model_des.parameters() if parameters.requires_grad],lr=0.003)"
+    "optimizer=torch.optim.Adam([parameters for parameters in model_des.parameters() if parameters.requires_grad], lr=0.003)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 0/10\n",
       "Epoch: 1/10\n",
       "Epoch: 2/10\n",
       "Epoch: 3/10\n",
@@ -1210,6 +1227,7 @@
       "Epoch: 7/10\n",
       "Epoch: 8/10\n",
       "Epoch: 9/10\n",
+      "Epoch: 10/10\n",
       "0.9857142857142858\n"
      ]
     }
@@ -1237,61 +1255,25 @@
     "    for x_test, y_test in validation_loader:\n",
     "        model_des.eval()\n",
     "        z=model_des(x_test)\n",
-    "        _,yhat=torch.max(z.data,1)\n",
+    "        _,yhat=torch.max(z.data, 1)\n",
     "        correct+=(yhat==y_test).sum().item()\n",
     "    accuracy=correct/n_test\n",
     "    accuracy_list.append(accuracy)\n",
-    "    print(\"Epoch: {}/{}\".format(epoch+1,N_EPOCHS))\n",
+    "    print(\"Epoch: {}/{}\".format(epoch+1, N_EPOCHS))\n",
     "    \n",
     "print(accuracy)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n"
-     ]
-    }
-   ],
-   "source": [
-    "N_EPOCHS = 10\n",
-    "\n",
-    "for epoch in range(N_EPOCHS):\n",
-    "    print(epoch+1)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2 id=\"#save\">Save the trained model</h2>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Save the trained model for the following chapters"
+    "<h2>Save the trained models</h2>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1300,13 +1282,6 @@
     "torch.save(model, \"resnet18_pytorch.pt\")\n",
     "torch.save(model_des, \"densenet121_pytorch.pt\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
